Multi-module, In-app purchases

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="github">GitHub</string>
     <string name="license">License</string>
     <string name="rate_app">Rate app</string>
+    <string name="coffee_for_developers">Coffee for developers</string>
 
 </resources>
